Merge CommandResolver with CommandArgumentParser